(lang dune 3.0)

(name otorus)

(generate_opam_files true)

(source
 (github benmandrew/otorus))

(authors "Ben Andrew")

; (maintainers "Maintainer Name")

; (license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name otorus)
;  (synopsis "A short synopsis")
;  (description "A longer description")
 (depends ocaml dune))
;  (tags
;   (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
